--- a/sandwich-club/app/src/main/res/layout/activity_detail.xml
+++ b/sandwich-club/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,7 +16,8 @@
     <TextView
         android:id="@+id/origin_tv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="16dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,4 +57,4 @@
         android:layout_height="wrap_content"
         android:text="@string/detail_description_label"
         android:textStyle="bold" />
-</FrameLayout>
+</ScrollView>
