update activity_detail.xml to reshuffle page elements

--- a/sandwich-club/app/src/main/res/layout/activity_detail.xml
+++ b/sandwich-club/app/src/main/res/layout/activity_detail.xml
@@ -8,6 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <!-- SANDWICH PICTURE-->
         <ImageView
             android:id="@+id/image_iv"
             android:layout_width="match_parent"
@@ -16,12 +18,7 @@
             android:contentDescription="@string/sandwich_picture_content_description"
             android:scaleType="centerCrop" />
 
-        <TextView
-            android:id="@+id/origin_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"/>
-
+        <!--ALSO KNOWN AS-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,11 +26,11 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/also_known_tv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_ingredients_label"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content" />
 
+        <!--PLACE OF ORIGIN-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,24 +38,34 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/origin_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"/>
+
+        <!--DESCRIPTION-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/detail_description_label"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/description_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+        <!--INGREDIENTS-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/detail_ingredients_label"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/ingredients_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/also_known_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_description_label"
-            android:textStyle="bold" />
     </LinearLayout>
 </ScrollView>
