--- a/popular-movies-app/app/src/main/res/layout/activity_main.xml
+++ b/popular-movies-app/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
     <!-- buttons to toggle between most popular and highest ratings -->
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,25 +16,31 @@
             android:id="@+id/button_popular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_popular"/>
+            android:text="@string/button_popular" />
 
         <Button xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/button_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_ratings"/>
+            android:text="@string/button_ratings" />
+
     </LinearLayout>
+
 
     <!-- grid for movie posters -->
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/movie_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="90dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="0dp"
+        android:layout_marginTop="50dp"
+        android:columnWidth="0dp"
+        android:gravity="center"
         android:horizontalSpacing="0dp"
+        android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:gravity="center"></GridView>
+        android:verticalSpacing="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></GridView>
+
+
 
 </android.support.constraint.ConstraintLayout>
