fix bugs in NetworkUtils and JsonParse

--- a/popular-movies-app/app/src/main/res/layout/activity_main.xml
+++ b/popular-movies-app/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,13 @@
 
     </LinearLayout>
 
-
+    <TextView
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:text="fdasfasfafasd"
+        app:layout_constraintTop_toTopOf="parent" />
     <!-- grid for movie posters -->
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/movie_grid"
