add loading bar when calling API and read from config

--- a/popular-movies-app/app/src/main/res/layout/activity_main.xml
+++ b/popular-movies-app/app/src/main/res/layout/activity_main.xml
@@ -30,15 +30,16 @@
         android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
-        android:text="fdasfasfafasd"
+        android:layout_marginTop="50dp"
+        android:text="test test test"
         app:layout_constraintTop_toTopOf="parent" />
+
     <!-- grid for movie posters -->
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/movie_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="75dp"
         android:columnWidth="0dp"
         android:gravity="center"
         android:horizontalSpacing="0dp"
