finish draft of getting trailers

--- a/popular-movies-app-2/app/src/main/res/layout/activity_movie_details.xml
+++ b/popular-movies-app-2/app/src/main/res/layout/activity_movie_details.xml
@@ -112,6 +112,7 @@
                 app:fontFamily="serif" />
         </LinearLayout>
 
+        <include layout="@layout/activity_movie_details_trailers"></include>
 
     </LinearLayout>
 
