dynamically generate buttons for trailers

--- a/popularmoviesapp2/app/src/main/res/layout/activity_movie_details_trailers.xml
+++ b/popularmoviesapp2/app/src/main/res/layout/activity_movie_details_trailers.xml
@@ -25,7 +25,7 @@
         android:textAlignment="center"
         android:textSize="14sp"
         app:fontFamily="serif"
-        />
+        android:visibility="gone"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
