get reviews for selected movie from imdb and put on screen

--- a/popularmoviesapp2/app/src/main/res/layout/activity_movie_details.xml
+++ b/popularmoviesapp2/app/src/main/res/layout/activity_movie_details.xml
@@ -113,6 +113,7 @@
         </LinearLayout>
 
         <include layout="@layout/activity_movie_details_trailers"></include>
+        <include layout="@layout/activity_movie_details_reviews"></include>
 
     </LinearLayout>
 
