create pink and grey hearts for favoriting movies

--- a/popularmoviesapp2/app/src/main/res/layout/activity_movie_details.xml
+++ b/popularmoviesapp2/app/src/main/res/layout/activity_movie_details.xml
@@ -86,6 +86,12 @@
                     app:fontFamily="serif" />
 
             </LinearLayout>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/favorites_btn" />
+
         </LinearLayout>
 
         <!-- MOVIE SYNOPSIS -->
