--- a/popularmoviesapp2/app/src/main/res/values/colors.xml
+++ b/popularmoviesapp2/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="favPinkColor">#ed89de</color>
+    <color name="hatefulGray">#777176</color>
 </resources>
