--- a/popularmoviesapp2/app/src/main/res/layout/activity_movie_details.xml
+++ b/popularmoviesapp2/app/src/main/res/layout/activity_movie_details.xml
@@ -85,12 +85,12 @@
                     android:textSize="14sp"
                     app:fontFamily="serif" />
 
+                <Button
+                    android:id="@+id/favorites_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/favorite_movie" />
             </LinearLayout>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/favorites_btn" />
 
         </LinearLayout>
 
