--- a/popularmoviesapp2/app/src/main/res/menu/nav_bar.xml
+++ b/popularmoviesapp2/app/src/main/res/menu/nav_bar.xml
@@ -8,4 +8,7 @@
     <item
         android:id="@+id/top_rated_movies"
         android:title="@string/button_ratings"/>
+    <item
+        android:id="@+id/your_movies"
+        android:title="@string/button_like"/>
 </menu>
