--- a/baking-app/app/src/main/res/layout/recipe_list_content.xml
+++ b/baking-app/app/src/main/res/layout/recipe_list_content.xml
@@ -24,4 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:textAppearance="?attr/textAppearanceListItem" />
+
+    <include layout="@id/list_of_steps_layout"></include>
+
 </LinearLayout>
