--- a/baking-app/app/src/main/res/layout/recipe_list_content.xml
+++ b/baking-app/app/src/main/res/layout/recipe_list_content.xml
@@ -25,6 +25,6 @@
         android:layout_margin="8dp"
         android:textAppearance="?attr/textAppearanceListItem" />
 
-    <include layout="@id/list_of_steps_layout"></include>
+    <include layout="@layout/recipe_steps_list"></include>
 
 </LinearLayout>
