--- a/baking-app/app/src/main/res/layout/recipe_steps_list.xml
+++ b/baking-app/app/src/main/res/layout/recipe_steps_list.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:id="@id/list_of_steps_layout">
+    android:id="@+id/step_list">
 
     <TextView
         android:layout_width="match_parent"
