--- a/baking-app/app/src/main/res/layout/recipe_list_content.xml
+++ b/baking-app/app/src/main/res/layout/recipe_list_content.xml
@@ -5,26 +5,10 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/recipe_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
-
-    <TextView
-        android:id="@+id/recipe_serving"
+        android:id="@+id/step"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:textAppearance="?attr/textAppearanceListItem" />
-
-    <TextView
-        android:id="@+id/recipe_ingredients"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textAppearance="?attr/textAppearanceListItem" />
-
-    <include layout="@layout/recipe_steps_list"></include>
 
 </LinearLayout>
