--- a/BakingRecipes/app/src/main/res/layout/recipe_detail.xml
+++ b/BakingRecipes/app/src/main/res/layout/recipe_detail.xml
@@ -3,12 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp">
+>
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/video_player">
 
     </com.google.android.exoplayer2.ui.PlayerView>
