--- a/BakingRecipes/app/src/main/res/layout/recipe_detail.xml
+++ b/BakingRecipes/app/src/main/res/layout/recipe_detail.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
->
+    android:orientation="vertical">
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:layout_width="match_parent"
@@ -16,7 +15,6 @@
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/recipe_detail"
-        style="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
