--- a/BakingRecipes/app/src/main/res/layout/recipe_widget.xml
+++ b/BakingRecipes/app/src/main/res/layout/recipe_widget.xml
@@ -12,8 +12,6 @@
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
         android:background="#09C"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:textColor="#ffffff"/>
 
 </RelativeLayout>
