--- a/Capstone_Stage2/app/src/main/res/values/colors.xml
+++ b/Capstone_Stage2/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="homepage_purple">#8658bf</color>
+    <color name="text_white">#ffffff</color>
 </resources>
