--- a/Capstone_Stage2/app/src/main/res/layout/activity_main.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_centerInParent="false"
-    android:layout_centerHorizontal="false"
-    android:layout_centerVertical="false"
     android:background="@color/homepage_purple"
+    android:gravity="center_vertical"
+    android:orientation="vertical"
+    android:padding="20dp"
     app:layout_anchorGravity="center_vertical"
     tools:context=".MainActivity">
 
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="@string/title_1"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/title"
         android:textAlignment="center"
         android:textColor="@color/text_white"
-        android:textSize="50sp"
+        android:textSize="45sp"
         app:fontFamily="@font/alice" />
 
-    <TextView
+    <ImageView
+        android:id="@+id/homepage_radio_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        android:contentDescription="@string/homepage_icon_contentDescription"
+        android:src="@drawable/baseline_radio_white_48" />
+
+    <!-- Google's sign in button -->
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_2"
-        android:textAlignment="center"
-        android:textColor="@color/text_white"
-        android:textSize="50sp"
-        app:fontFamily="@font/alice"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/title_3"
-        android:textAlignment="center"
-        android:textColor="@color/text_white"
-        android:textSize="50sp"
-        app:fontFamily="@font/alice"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"
-        android:gravity="center|bottom"
-        android:orientation="vertical"
-        android:padding="20dp">
-
-        <ImageView
-            android:id="@+id/homepage_radio_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:contentDescription="@string/homepage_icon_contentDescription"
-            android:src="@drawable/baseline_radio_white_48" />
-
-        <!-- Google's sign in button -->
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
-
-    </LinearLayout>
+        android:layout_gravity="center_horizontal" />
 
 
 </LinearLayout>
