--- a/Capstone_Stage2/app/src/main/res/values/colors.xml
+++ b/Capstone_Stage2/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#D81B60</color>
     <color name="homepage_purple">#8658bf</color>
     <color name="text_white">#ffffff</color>
+
+    <!-- button colors -->
+    <color name="pink_button">#f57fba</color>
+    <color name="light_blue_button">#76b3f5</color>
+
 </resources>
