--- a/Capstone_Stage2/app/src/main/res/layout/podcast_list.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/podcast_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Each item in recycler view -->
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,8 +7,6 @@
     android:name="com.udacity.android.podcastbemine.ui.PodcastListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ui.PodcastListActivity"
     tools:listitem="@layout/podcast_list_content" />
