--- a/Capstone_Stage2/app/src/main/res/layout/podcast_list_content.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/podcast_list_content.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- actual content of each recycler view item -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/id_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
-
-    <TextView
         android:id="@+id/content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:drawableRight="@drawable/baseline_chevron_right_black_18"/>
 </LinearLayout>
