--- a/Capstone_Stage2/app/src/main/res/layout/activity_podcast_detail.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/activity_podcast_detail.xml
@@ -50,6 +50,6 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@+id/podcast_detail_container"
         app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/stat_notify_chat" />
+        android:src="@drawable/baseline_add_circle_outline_white_36"/>
 
 </android.support.design.widget.CoordinatorLayout>
