--- a/Capstone_Stage2/app/src/main/res/layout/activity_search.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/activity_search.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/search_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/search_title"
@@ -24,18 +25,20 @@
             android:layout_marginBottom="10dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/search_keyword_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/search_label"
-                android:textColorHint="@color/exo_error_message_background_color"/>
+                android:textColorHint="@color/exo_error_message_background_color" />
 
         </android.support.design.widget.TextInputLayout>
 
         <TextView
+            android:id="@+id/search_option_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:text="@string/episode_label"/>
+            android:text="@string/episode_label"
+            android:textSize="12dp" />
 
         <Spinner
             android:id="@+id/search_option_menu"
