--- a/Capstone_Stage2/app/src/main/res/layout/activity_main.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,8 @@
         android:id="@+id/sign_in_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="googleSignInProcess"/>
 
 
 </LinearLayout>
