--- a/Capstone_Stage2/app/src/main/res/layout/activity_sign_in_error.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/activity_sign_in_error.xml
@@ -14,7 +14,7 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/play_error"
+        android:id="@+id/sign_in_error"
         android:text="@string/google_error"
         android:drawableTop="@drawable/baseline_error_black_24"/>
 
