--- a/Capstone_Stage2/app/src/main/res/layout/podcast_detail.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/podcast_detail.xml
@@ -41,7 +41,7 @@
 
         <TextView
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/podcast_detail"
+            android:id="@+id/podcast_description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textIsSelectable="true"
