add search demo code

--- a/FirebaseTest/app/src/main/res/layout/activity_main.xml
+++ b/FirebaseTest/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,13 @@
             android:text="ADD">
         </Button>/
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/search"
+            android:text="SEARCH">
+        </Button>/
+
         <TextView
             android:id="@+id/test"
             android:textAlignment="center"
