--- a/FirebaseTest/app/src/main/res/layout/activity_delete_entry.xml
+++ b/FirebaseTest/app/src/main/res/layout/activity_delete_entry.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchEntry">
+    tools:context=".DeleteEntry">
 
     <LinearLayout
         android:orientation="vertical"
@@ -18,38 +18,19 @@
             android:layout_marginBottom="10dp">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/find_user"
+                android:id="@+id/delete_user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Find by User ID"/>
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/find_podcast"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Find by Podcast ID"/>
+                android:hint="Delete by User ID"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/search_btn"
-            android:text="Search"
+            android:id="@+id/delete_now"
+            android:text="Delete"
             android:textAlignment="center"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/results"
-            android:textAlignment="center"/>
     </LinearLayout>
 </ScrollView>
