--- a/xyz-reader/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/xyz-reader/XYZReader/src/main/res/layout/list_item_article.xml
@@ -18,8 +18,8 @@
         <!--suppress AndroidLintContentDescription -->
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/photo_placeholder" />
 
         <TextView
@@ -31,7 +31,7 @@
             android:paddingTop="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
-            android:textColor="@color/ltgray"
+            android:textColor="@color/dark_grey"
             android:ellipsize="end"
             android:maxLines="4" />
 
@@ -43,9 +43,9 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="16dp"
-            android:textColor="#6000"
+            android:textColor="@color/light_grey"
             android:maxLines="2"
-            android:ellipsize="end" />
+            android:ellipsize="end"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
