fix FAB, styles, performance

--- a/xyz-reader/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/xyz-reader/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -24,12 +24,12 @@
         android:id="@+id/toolbar_container"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/deep_purple"
+        style="@style/myToolbar"
         android:elevation="8dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            app:theme="@style/newToolbar"
+            style="@style/myToolbar"
             android:layout_marginLeft="@dimen/list_toolbar_side_margin"
             android:layout_marginRight="@dimen/list_toolbar_side_margin"
             android:layout_width="match_parent"
