--- a/xyz-reader/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/xyz-reader/XYZReader/src/main/res/layout/list_item_article.xml
@@ -25,26 +25,24 @@
 
         <TextView
             android:id="@+id/article_title"
-            style="@style/TextAppearance.AppCompat.Subhead"
+            style="@style/myCardTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
             android:paddingTop="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
-            android:textColor="@color/dark_grey"
             android:ellipsize="end"
             android:maxLines="4" />
 
         <TextView
             android:id="@+id/article_subtitle"
-            style="@style/TextAppearance.AppCompat.Body1"
+            style="@style/myCardSubTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="16dp"
-            android:textColor="@color/light_grey"
             android:maxLines="2"
             android:ellipsize="end"/>
     </LinearLayout>
