--- a/xyz-reader/XYZReader/src/main/res/values/styles.xml
+++ b/xyz-reader/XYZReader/src/main/res/values/styles.xml
@@ -18,15 +18,38 @@
 <resources>
 
     <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
-
+        <item name="colorPrimary">@color/myPrimary</item>
+        <item name="colorPrimaryDark">@color/myPrimaryDark</item>
+        <item name="colorAccent">@color/myAccent</item>
     </style>
 
     <style name="Theme.Bacon.Detail">
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="newToolbar">
-        <item name="theme">@style/ThemeOverlay.AppCompat.Dark</item>
+    <style name="myToolbar" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#ffffff</item>
         <item name="android:background">@color/deep_purple</item>
+    </style>
+
+    <style name="myCardTitle" parent="TextAppearance.AppCompat.Subhead">
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
+
+    <style name="myCardSubTitle" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/light_grey</item>
+    </style>
+
+    <style name="myArticleTitle">
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
+    <style name="myArticleSubTitle">
+        <item name="android:textColor">#8fff</item>
+    </style>
+
+    <style name="myArticleBody">
+        <item name="android:textColor">@color/light_grey</item>
+        <item name="android:textColorLink">@color/theme_accent</item>
     </style>
 </resources>
